--- a/Projects/sharda-clone/package.json
+++ b/Projects/sharda-clone/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
